delete cylinder tests add variables axis constants to Vector fix problem in Triangle implementation Fix camera builder logics Fix camera tests (javadoc) and integrations tests